# bz2zstd

./: .gitignore  .pre-commit-config.yaml  BENCHMARKING.md  Cargo.toml  README.md  benchmark.sh  benchmark_results.txt  test_e2e_limit.bin.bz2  test_e2e_limit.bin.zst  verify.sh  verify_tuning.sh  verify_zstd.sh
.github/workflows/: ci.yml  release.yml
bz2zstd/: Cargo.toml
bz2zstd/src/: main.rs  writer.rs
fuzz/: Cargo.toml  README.md
fuzz/fuzz_targets/: fuzz_block_decompress.rs  fuzz_decoder.rs  fuzz_scanner.rs
parallel_bzip2/: Cargo.toml  README.md
parallel_bzip2/benches/: decode_benchmark.rs  e2e_benchmark.rs  scanner_benchmark.rs
parallel_bzip2/examples/: simple_decode.rs  test_decoder.rs
parallel_bzip2/src/: decoder.rs  lib.rs  scanner.rs
parallel_bzip2/tests/: regression.rs
scripts/: benchmark_comparison.sh  benchmark_scaling.sh  profile_cpu.sh  profile_memory.sh
src/: main.rs  scanner.rs  tuner.rs  writer.rs
tests/: e2e.rs
