[package]
name = "bz2zstd"
version = "0.1.0"
edition = "2021"

[dependencies]
bzip2 = { version = "0.4", features = ["static"] }
rayon = "1.7"
memmap2 = "0.7"
clap = { version = "4.4", features = ["derive"] }
anyhow = "1.0"
crossbeam-channel = "0.5"
zstd = { version = "0.13", features = ["zstdmt"] }
indicatif = "0.17"
parallel_bzip2 = { path = "../parallel_bzip2" }


