[package]
name = "parallel_bzip2"
version = "0.1.0"
edition = "2021"

[dependencies]
aho-corasick = "1.1.4"
crossbeam-channel = "0.5"
rayon = "1.7"
thiserror = "1.0"
bzip2 = { version = "0.4", features = ["static"] }
anyhow = "1.0"
memmap2 = "0.7"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
pprof = { version = "0.13", features = ["flamegraph", "criterion"] }

[[bench]]
name = "decode_benchmark"
harness = false

[[bench]]
name = "scanner_benchmark"
harness = false

[[bench]]
name = "e2e_benchmark"
harness = false
